--- a/conf/settings.conf
+++ b/conf/settings.conf
@@ -1,3 +1,8 @@
 {
-    "port": "8902"
+    "port": "8902",
+    "username": "root",
+    "password": "jiangyi00?",
+    "ip": "127.0.0.1",
+    "dbPort":"3306",
+    "dbName": "tensir_blog"
 }
